Fixed preferences bloc alignment when window width < 1300px

--- a/client/src/styles/stylesUserPersonal.css
+++ b/client/src/styles/stylesUserPersonal.css
@@ -18,6 +18,7 @@
   font-size: 1.3rem;
   padding: 0.2rem;
   margin-right: 0.2rem;
+  align-items: center;
 }
 
 .edit-icon {
