--- a/client/src/styles/stylesUserPreferences.css
+++ b/client/src/styles/stylesUserPreferences.css
@@ -4,7 +4,7 @@
 }
 
 .container-preferences {
-  width: 110%;
+  width: 100%;
   margin-top: 0.5rem;
 }
 
@@ -39,7 +39,8 @@ select {
 }
 
 .edit-text {
-  margin: 2rem 0 0 10rem;
+  margin: 2rem 0 0 0rem;
+text-align:center;
 }
 
 @media screen and (max-width: 1300px) {
@@ -47,10 +48,16 @@ select {
     padding-top: 10%;
     margin: unset !important;
     width: unset !important;
+    
     font-family: Lato, "Helvetica Neue", Arial, Helvetica, sans-serif;
   }
 
   .button-edit-preferences {
-    margin: 4rem 0 0 40% !important;
+    margin: 3rem 0 0 0 !important;
+  }
+  .container-preferences {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }
